--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- ----------------------------------  Type  ----------------------------------- -->
   
-  
+  asdasd
   <div class="typography box container">
     <div class="heading">
       <h1 class="title">Типографика</h1>
