--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Paperdavid.GitHub.io by paperdavid</title>
+    <title>Paperdavid.GitHub.io</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,11 +15,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Paperdavid.GitHub.io</h1>
+        <h1>Paperdavid.github.io</h1>
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/paperdavid">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/paperdavid">View my Github profile</a></p>
+        <p class="view"><a href="https://paperdavid.ru">View my site</a></p>
 
       </header>
       <section>
@@ -49,7 +50,7 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash;</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
