--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <p class="view"><a href="https://github.com/paperdavid">View my Github profile</a></p>
-        <p class="view"><a href="https://paperdavid.ru">View my site</a></p>
+        <p class="view"><a href="https://paperdavid.ru" target="_blank">View my site</a></p>
 
       </header>
       <section>
