--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       </header>
       <section>
         <h3>Проект  &#171;Бизнес-центр&#187;</h3>
-
-<p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/bakunina" target="_blank">&#128279;</a></p>
+        <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/bakunina" target="_blank">&#128279;</a></p>
 
         <h3>Проект  &#171;Basocrm&#187;</h3>
+        <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/basocrm" target="_blank">&#128279;</a></p>
 
-<p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/basocrm" target="_blank">&#128279;</a></p>
+      <h3>Ui-kit for Epic Skills Scholl</h3>
+      <p>В разработке <a href="http://paperdavid.github.io/presentations/kit" target="_blank">&#128279;</a></p>
 
       </section>
       <footer>
@@ -38,6 +39,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
