--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/basocrm" target="_blank">&#128279;</a></p>
 
       <h3>Ui-kit for Epic Skills Scholl</h3>
-      <p>В разработке <a href="http://paperdavid.github.io/presentations/kit" target="_blank">&#128279;</a></p>
+      <p>В разработке <a href="http://paperdavid.github.io/kit" target="_blank">&#128279;</a></p>
 
       </section>
       <footer>
