--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <h1>Paperdavid.github.io</h1>
         <p></p>
 
-
         <p class="view"><a href="https://github.com/paperdavid">View my Github profile</a></p>
         <p class="view"><a href="https://paperdavid.ru" target="_blank">View my site</a></p>
 
@@ -30,8 +29,8 @@
         <h3>Проект  &#171;Basocrm&#187;</h3>
         <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/basocrm" target="_blank">&#128279;</a></p>
 
-      <h3>Ui-kit for Epic Skills Scholl</h3>
-      <p>В разработке <a href="http://paperdavid.github.io/kit" target="_blank">&#128279;</a></p>
+        <h3>Ui-kit for Epic Skills School</h3>
+        <p>В разработке <a href="http://paperdavid.github.io/kit" target="_blank">&#128279;</a></p>
 
       </section>
       <footer>
