Коррекция для Basocrm

--- a/presentations/basocrm/index.html
+++ b/presentations/basocrm/index.html
@@ -1,117 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Проект "Бакунина, 5"</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=680, user-scalable=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/screen.css">
-  </head>
-  <body class="list">
-    <!--
-      Debug class on <body> enables
-      cyan grid on slides
-      -->
-    <header class="caption">
-      <h1>Бакунина, 5</h1>
-      <p>Разработка сайта</p>
-    </header>
-
-<!-- -----------------------------------	1	----------------------------------- -->
-
-	<section class="slide shout up"><div>
-		<h2>Структура сайта</h2>
-	</div></section>
-
-<!-- -----------------------------------  2  ----------------------------------- -->
+	<head>
+		<title>Проект "BasoCRM"</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=680, user-scalable=no">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<link rel="stylesheet" href="styles/screen.css">
+	</head>
+	<body class="list">
 
 
-    <section class="slide"><div>
-      <h2>Структура сайта</h2>
-    <ul>
-      <li>Главная страница</li>
-      <li>Фотогалерея</li>
-      <li>Офисы
-        <ol>
-          <li>Поэтажные планы</li>
-          <li>Фильтруемый каталог офисов</li>
-        </ol>
-      </li>
-      <li>Новости</li>
-      <li>Арендаторы</li>
-      <li>Контактная информация</li>
-    </ul>
-	</div></section>
+		<header class="caption">
+			<h1>BasoCRM</h1>
+			<p>Брендинг, landing page, UI</p>
+		</header>
 
-<!-- -----------------------------------  3  ----------------------------------- -->
+<!-- ----------------------------------	1	---------------------------------- -->
+
+
 
 	<section class="slide shout up"><div>
-		<h2>Главная страница</h2>
+		<h2>Структура проекта</h2>
 	</div></section>
 
-<!-- -----------------------------------  4  ----------------------------------- -->
+<!-- ----------------------------------	2	---------------------------------- -->
 
-	<section class="slide"><div>
-		<h2>Главная страница</h2>
-		<ul>
-			<li>Header (Шапка)</li>
-				<ol>
-					<li>Логотип</li>
-					<li>Контактные данные</li>
-					<li>Имиджевое фото</li>
-				</ol>
-			<li>Краткая информация о БЦ</li>
-			<li>Блок новостей</li>
-			<li>Блок акций (срочные новости)</li>
-		</ul>
-	</div></section>
 
-<!-- ----------------------------------- 	5 ---------------------------------- -->
-	
-	<section class="slide"><div>
-		<h2>Главная страница</h2>
-		<ul>
-			<li>Слайдер с фото и текстом</li>
-			<li>Форма отправки заявки</li>
-			<li>Блок с логотипами арендаторов</li>
-			<li>Footer (Подвал)</li>
-				<ol>
-					<li>Контактная информация</li>
-					<li>Карта сайта</li>
-					<li>Соц. сети</li>
-				</ol>
-		</ul>
-	</div></section>
 
-<!-- -----------------------------------	6	----------------------------------- -->
+
+		<section class="slide">
+			<div>
+				<h2>Структура проекта</h2>
+					<ul>
+						<li>Брендинг</li><p>Разработка логотипа</p>
+						<li>Landing page</li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, rerum.</p>
+						<li>UI</li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sapiente.</p>
+					</ul>
+			</div>
+		</section>
+
+<!-- ----------------------------------	3	---------------------------------- -->
+
+
 
 	<section class="slide shout up"><div>
-		<h2>Фотогалерея</h2>
+		<h2>Брендинг</h2>
 	</div></section>
 
-<!-- -----------------------------------	7	----------------------------------- -->
-
-	<section class="slide"><div>
-		<h2>Фотогалерея</h2>
-				<ul>
-					<li>Слайдер (на всю ширину)</li>
-					<li>Таблица фотографий (при наведении открываются)</li>
-					<li>Описание к каждому фото</li>
-					<li>Виртуальный тур (общий)</li>
-				</ul>
-	</div></section>
+<!-- ----------------------------------	4	---------------------------------- -->
 
 
-<!-- -----------------------------------	9	----------------------------------- -->
+
+	<section class="slide">
+		<div>
+			<h2>Брендинг</h2>
+			<ul>
+				<li>Логотип</li><p>Шоб красивенький</p>
+				<li>Графика на сайт</li>
+				<li>Визитки</li>
+				<li>Бланк</li>
+			</ul>
+		</div>
+	</section>
+
+<!-- ----------------------------------	5	---------------------------------- -->
+
 
 	<section class="slide shout up"><div>
-		<h2>Офисы</h2>
+		<h2>Landing page</h2>
 	</div></section>
 
-<!-- -----------------------------------	10	----------------------------------- -->
+<!-- ----------------------------------	6	---------------------------------- -->
+
+
+	<section class="slide">
+		<div>
+			<h2>Landing page</h2>
+			<ul>
+				<li>Слайдер (на всю ширину)</li>
+				<li>Таблица фотографий (при наведении открываются)</li>
+				<li>Описание к каждому фото</li>
+				<li>Виртуальный тур (общий)</li>
+			</ul>
+		</div>
+	</section>
+
+<!-- ----------------------------------	7	---------------------------------- -->
+
+
+	<section class="slide">
+		<div>
+			<h2>Landing page</h2>
+			<ul>
+				<li>Слайдер (на всю ширину)</li>
+				<li>Таблица фотографий (при наведении открываются)</li>
+				<li>Описание к каждому фото</li>
+				<li>Виртуальный тур (общий)</li>
+			</ul>
+		</div>
+	</section>
+
+
+<!-- ----------------------------------	8	---------------------------------- -->
+
+
+	<section class="slide shout up">
+		<div>
+			<h2>User Interface</h2>
+		</div>
+	</section>
+
+<!-- ----------------------------------	9	---------------------------------- -->
+
 
 	<section class="slide"><div>
-		<h2>Офисы</h2>
+		<h2>User Interface</h2>
 		<ul>
 			<li>Каталог</li>
 				<ol>
@@ -131,7 +134,8 @@
 			</div></section>
 
 
-<!-- -----------------------------------	11	----------------------------------- -->
+<!-- ----------------------------------	10	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Офисы</h2>
@@ -153,13 +157,15 @@
 				</ul>
 	</div></section>
 
-<!-- -----------------------------------	12	----------------------------------- -->
+<!-- ----------------------------------	11	---------------------------------- -->
+
 
 	<section class="slide shout up"><div>
 		<h2>Новости</h2>
 	</div></section>
 
-<!-- -----------------------------------	13	----------------------------------- -->
+<!-- ----------------------------------	12	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Новости</h2>
@@ -171,14 +177,16 @@
 				</ul>
 	</div></section>
 
-<!-- -----------------------------------	14	----------------------------------- -->
+<!-- ----------------------------------	13	---------------------------------- -->
+
 
 
 	<section class="slide shout up"><div>
 		<h2>Арендаторы</h2>
 	</div></section>
 
-<!-- -----------------------------------	13	----------------------------------- -->
+<!-- ----------------------------------	14	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Арендаторы</h2>
@@ -190,14 +198,16 @@
 				</ul>
 	</div></section>
 
-<!-- -----------------------------------	14	----------------------------------- -->
+<!-- ----------------------------------	15	---------------------------------- -->
+
 
 
 	<section class="slide shout up"><div>
 		<h2>Контактная информация БЦ</h2>
 	</div></section>
 
-<!-- -----------------------------------	13	----------------------------------- -->
+<!-- ----------------------------------	16	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Контакты</h2>
@@ -213,9 +223,9 @@
 
 
 
-<!-- -----------------------------------	14	----------------------------------- -->
-<!-- -----------------------------------	15	----------------------------------- -->
-<!-- -----------------------------------	16	----------------------------------- -->
+<!-- ----------------------------------	17	---------------------------------- -->
+<!-- ----------------------------------	17	---------------------------------- -->
+<!-- ----------------------------------	17	---------------------------------- -->
 
 
 
@@ -225,7 +235,8 @@
 	</div></section>
 
 
-<!-- -----------------------------------	11	----------------------------------- -->
+<!-- ----------------------------------	18	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Адаптивность</h2>
@@ -239,7 +250,8 @@
 	</div></section>
 
 
-<!-- -----------------------------------	12	----------------------------------- -->
+<!-- ----------------------------------	19	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -254,7 +266,8 @@
 				<img src="images/cross.png" height="66" style="bottom: 40px;right: 20px;position: absolute;"alt="">
 	</div></section>
 
-<!-- -----------------------------------	12	----------------------------------- -->
+<!-- ----------------------------------	20	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -271,7 +284,8 @@
 	</div></section>
 
 
-	<!-- -----------------------------------	12	----------------------------------- -->
+<!-- ----------------------------------	21	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -286,7 +300,8 @@
 	</div></section>
 
 
-		<!-- -----------------------------------	12	----------------------------------- -->
+<!-- ----------------------------------	22	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -308,15 +323,16 @@
 
 
 
-<!-- -----------------------------------	14	----------------------------------- -->
-<!-- -----------------------------------	15	----------------------------------- -->
-<!-- -----------------------------------	16	----------------------------------- -->
+<!-- ----------------------------------	23	---------------------------------- -->
+<!-- ----------------------------------	23	---------------------------------- -->
+<!-- ----------------------------------	23	---------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #5E35B1;"><div>
 		<h2>Дизайн</h2>
 	</div></section>
 
-<!-- -----------------------------------	1	----------------------------------- -->
+<!-- ----------------------------------	24	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -336,7 +352,8 @@
 	</div></section>
 
 
-<!-- -----------------------------------	1	----------------------------------- -->
+<!-- ----------------------------------	25	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Типографика</h2>
@@ -351,7 +368,8 @@
 	</div></section>
 
 
-<!-- -----------------------------------	1	----------------------------------- -->
+<!-- ----------------------------------	26	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Примеры</h2>
@@ -367,15 +385,16 @@
 
 
 
-<!-- -----------------------------------	14	----------------------------------- -->
-<!-- -----------------------------------	15	----------------------------------- -->
-<!-- -----------------------------------	16	----------------------------------- -->
+<!-- ----------------------------------	27	---------------------------------- -->
+<!-- ----------------------------------	27	---------------------------------- -->
+<!-- ----------------------------------	27	---------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #90A4AE;"><div>
 		<h2>Продвижение</h2>
 	</div></section>
 
-<!-- -----------------------------------	1	----------------------------------- -->
+<!-- ----------------------------------	28	---------------------------------- -->
+
 
 
 	<section class="slide"><div>
@@ -391,7 +410,8 @@
 	</div></section>
 
 
-<!-- -----------------------------------	1	----------------------------------- -->
+<!-- ----------------------------------	29	---------------------------------- -->
+
 
 	<section class="slide"><div>
 		<h2>Продвижение</h2>
@@ -408,9 +428,9 @@
 	</div></section>
 
 
-<!-- -----------------------------------	14	----------------------------------- -->
-<!-- -----------------------------------	15	----------------------------------- -->
-<!-- -----------------------------------	16	----------------------------------- -->
+<!-- ----------------------------------	30	---------------------------------- -->
+<!-- ----------------------------------	30	---------------------------------- -->
+<!-- ----------------------------------	30	---------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #FDD835;"><div>
 		<h2>Программное окружение</h2>
@@ -431,6 +451,50 @@
 	</div></section>
 
 
+<!-- ----------------------------------	31	---------------------------------- -->
+<!-- ----------------------------------	31	---------------------------------- -->
+<!-- ----------------------------------	31	---------------------------------- -->
+
+	<section class="slide shout right" style="background-color: #43A047;"><div>
+		<h2>Сроки</h2>
+	</div></section>
+
+
+	<section class="slide"><div>
+		<h2>Сроки</h2>
+				<ul>
+					<li>Все очень плохо</li>
+					<li>Никогда</li>
+					<li>Never</li>
+					<li>Ага</li>
+					<li>Оценка эффективности рекламных кампаний</li>
+					<li>Карта кликов</li>
+					<li>Почта, средства связи, удаленное управление сайтом и т.д.</li>
+				</ul>
+	</div></section>
+
+
+<!-- ----------------------------------	32	---------------------------------- -->
+<!-- ----------------------------------	32	---------------------------------- -->
+<!-- ----------------------------------	32	---------------------------------- -->
+
+	<section class="slide shout right" style="background-color: #D81B60;"><div>
+		<h2>Стоимость</h2>
+	</div></section>
+
+
+	<section class="slide"><div>
+		<h2>Программное окружение</h2>
+				<ul>
+					<li>Безопасность</li>
+					<li>Защита от спама</li>
+					<li>Онлайн мониторинг сайта</li>
+					<li>Полная статистика</li>
+					<li>Оценка эффективности рекламных кампаний</li>
+					<li>Карта кликов</li>
+					<li>Почта, средства связи, удаленное управление сайтом и т.д.</li>
+				</ul>
+	</div></section>
 
 
 
