--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -1,120 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Проект "BasoCRM"</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=680, user-scalable=no">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<link rel="stylesheet" href="styles/screen.css">
-	</head>
-	<body class="list">
+<head>
+	<title>Проект "Бакунина, 5"</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=680, user-scalable=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/screen.css">
+  </head>
+  <body class="list">
+    <!--
+      Debug class on <body> enables
+      cyan grid on slides
+      -->
+    <header class="caption">
+      <h1>Бакунина, 5</h1>
+      <p>Разработка сайта</p>
+    </header>
 
-
-		<header class="caption">
-			<h1>BasoCRM</h1>
-			<p>Брендинг, landing page, UI</p>
-		</header>
-
-<!-- ----------------------------------	1	---------------------------------- -->
-
-
-
-	<section class="slide shout up"><div>
-		<h2>Структура проекта</h2>
-	</div></section>
-
-<!-- ----------------------------------	2	---------------------------------- -->
-
-
-
-
-		<section class="slide">
-			<div>
-				<h2>Структура проекта</h2>
-					<ul>
-						<li>Брендинг</li><p>Разработка логотипа</p>
-						<li>Landing page</li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, rerum.</p>
-						<li>UI</li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sapiente.</p>
-					</ul>
-			</div>
-		</section>
-
-<!-- ----------------------------------	3	---------------------------------- -->
-
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 	<section class="slide shout up"><div>
-		<h2>Брендинг</h2>
+		<h2>Структура сайта</h2>
 	</div></section>
 
-<!-- ----------------------------------	4	---------------------------------- -->
+<!-- -----------------------------------  2  ----------------------------------- -->
 
 
+    <section class="slide"><div>
+      <h2>Структура сайта</h2>
+    <ul>
+      <li>Главная страница</li>
+      <li>Фотогалерея</li>
+      <li>Офисы
+        <ol>
+          <li>Поэтажные планы</li>
+          <li>Фильтруемый каталог офисов</li>
+        </ol>
+      </li>
+      <li>Новости</li>
+      <li>Арендаторы</li>
+      <li>Контактная информация</li>
+    </ul>
+	</div></section>
 
-	<section class="slide">
-		<div>
-			<h2>Брендинг</h2>
-			<ul>
-				<li>Логотип</li><p>Шоб красивенький</p>
-				<li>Графика на сайт</li>
-				<li>Визитки</li>
-				<li>Бланк</li>
-			</ul>
-		</div>
-	</section>
-
-<!-- ----------------------------------	5	---------------------------------- -->
-
+<!-- -----------------------------------  3  ----------------------------------- -->
 
 	<section class="slide shout up"><div>
-		<h2>Landing page</h2>
+		<h2>Главная страница</h2>
 	</div></section>
 
-<!-- ----------------------------------	6	---------------------------------- -->
-
-
-	<section class="slide">
-		<div>
-			<h2>Landing page</h2>
-			<ul>
-				<li>Слайдер (на всю ширину)</li>
-				<li>Таблица фотографий (при наведении открываются)</li>
-				<li>Описание к каждому фото</li>
-				<li>Виртуальный тур (общий)</li>
-			</ul>
-		</div>
-	</section>
-
-<!-- ----------------------------------	7	---------------------------------- -->
-
-
-	<section class="slide">
-		<div>
-			<h2>Landing page</h2>
-			<ul>
-				<li>Слайдер (на всю ширину)</li>
-				<li>Таблица фотографий (при наведении открываются)</li>
-				<li>Описание к каждому фото</li>
-				<li>Виртуальный тур (общий)</li>
-			</ul>
-		</div>
-	</section>
-
-
-<!-- ----------------------------------	8	---------------------------------- -->
-
-
-	<section class="slide shout up">
-		<div>
-			<h2>User Interface</h2>
-		</div>
-	</section>
-
-<!-- ----------------------------------	9	---------------------------------- -->
-
+<!-- -----------------------------------  4  ----------------------------------- -->
 
 	<section class="slide"><div>
-		<h2>User Interface</h2>
+		<h2>Главная страница</h2>
+		<ul>
+			<li>Header (Шапка)</li>
+				<ol>
+					<li>Логотип</li>
+					<li>Контактные данные</li>
+					<li>Имиджевое фото</li>
+				</ol>
+			<li>Краткая информация о БЦ</li>
+			<li>Блок новостей</li>
+			<li>Блок акций (срочные новости)</li>
+		</ul>
+	</div></section>
+
+<!-- ----------------------------------- 	5 ---------------------------------- -->
+	
+	<section class="slide"><div>
+		<h2>Главная страница</h2>
+		<ul>
+			<li>Слайдер с фото и текстом</li>
+			<li>Форма отправки заявки</li>
+			<li>Блок с логотипами арендаторов</li>
+			<li>Footer (Подвал)</li>
+				<ol>
+					<li>Контактная информация</li>
+					<li>Карта сайта</li>
+					<li>Соц. сети</li>
+				</ol>
+		</ul>
+	</div></section>
+
+<!-- -----------------------------------	6	----------------------------------- -->
+
+	<section class="slide shout up"><div>
+		<h2>Фотогалерея</h2>
+	</div></section>
+
+<!-- -----------------------------------	7	----------------------------------- -->
+
+	<section class="slide"><div>
+		<h2>Фотогалерея</h2>
+				<ul>
+					<li>Слайдер (на всю ширину)</li>
+					<li>Таблица фотографий (при наведении открываются)</li>
+					<li>Описание к каждому фото</li>
+					<li>Виртуальный тур (общий)</li>
+				</ul>
+	</div></section>
+
+
+<!-- -----------------------------------	9	----------------------------------- -->
+
+	<section class="slide shout up"><div>
+		<h2>Офисы</h2>
+	</div></section>
+
+<!-- -----------------------------------	10	----------------------------------- -->
+
+	<section class="slide"><div>
+		<h2>Офисы</h2>
 		<ul>
 			<li>Каталог</li>
 				<ol>
@@ -134,8 +131,7 @@
 			</div></section>
 
 
-<!-- ----------------------------------	10	---------------------------------- -->
-
+<!-- -----------------------------------	11	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Офисы</h2>
@@ -157,15 +153,13 @@
 				</ul>
 	</div></section>
 
-<!-- ----------------------------------	11	---------------------------------- -->
-
+<!-- -----------------------------------	12	----------------------------------- -->
 
 	<section class="slide shout up"><div>
 		<h2>Новости</h2>
 	</div></section>
 
-<!-- ----------------------------------	12	---------------------------------- -->
-
+<!-- -----------------------------------	13	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Новости</h2>
@@ -177,16 +171,14 @@
 				</ul>
 	</div></section>
 
-<!-- ----------------------------------	13	---------------------------------- -->
-
+<!-- -----------------------------------	14	----------------------------------- -->
 
 
 	<section class="slide shout up"><div>
 		<h2>Арендаторы</h2>
 	</div></section>
 
-<!-- ----------------------------------	14	---------------------------------- -->
-
+<!-- -----------------------------------	13	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Арендаторы</h2>
@@ -198,16 +190,14 @@
 				</ul>
 	</div></section>
 
-<!-- ----------------------------------	15	---------------------------------- -->
-
+<!-- -----------------------------------	14	----------------------------------- -->
 
 
 	<section class="slide shout up"><div>
 		<h2>Контактная информация БЦ</h2>
 	</div></section>
 
-<!-- ----------------------------------	16	---------------------------------- -->
-
+<!-- -----------------------------------	13	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Контакты</h2>
@@ -223,9 +213,9 @@
 
 
 
-<!-- ----------------------------------	17	---------------------------------- -->
-<!-- ----------------------------------	17	---------------------------------- -->
-<!-- ----------------------------------	17	---------------------------------- -->
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
 
 
 
@@ -235,8 +225,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	18	---------------------------------- -->
-
+<!-- -----------------------------------	11	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Адаптивность</h2>
@@ -250,8 +239,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	19	---------------------------------- -->
-
+<!-- -----------------------------------	12	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -266,8 +254,7 @@
 				<img src="images/cross.png" height="66" style="bottom: 40px;right: 20px;position: absolute;"alt="">
 	</div></section>
 
-<!-- ----------------------------------	20	---------------------------------- -->
-
+<!-- -----------------------------------	12	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -284,8 +271,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	21	---------------------------------- -->
-
+	<!-- -----------------------------------	12	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -300,8 +286,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	22	---------------------------------- -->
-
+		<!-- -----------------------------------	12	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -323,16 +308,15 @@
 
 
 
-<!-- ----------------------------------	23	---------------------------------- -->
-<!-- ----------------------------------	23	---------------------------------- -->
-<!-- ----------------------------------	23	---------------------------------- -->
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #5E35B1;"><div>
 		<h2>Дизайн</h2>
 	</div></section>
 
-<!-- ----------------------------------	24	---------------------------------- -->
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -352,8 +336,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	25	---------------------------------- -->
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Типографика</h2>
@@ -368,8 +351,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	26	---------------------------------- -->
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Примеры</h2>
@@ -385,16 +367,15 @@
 
 
 
-<!-- ----------------------------------	27	---------------------------------- -->
-<!-- ----------------------------------	27	---------------------------------- -->
-<!-- ----------------------------------	27	---------------------------------- -->
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #90A4AE;"><div>
 		<h2>Продвижение</h2>
 	</div></section>
 
-<!-- ----------------------------------	28	---------------------------------- -->
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 
 	<section class="slide"><div>
@@ -410,8 +391,7 @@
 	</div></section>
 
 
-<!-- ----------------------------------	29	---------------------------------- -->
-
+<!-- -----------------------------------	1	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Продвижение</h2>
@@ -428,9 +408,9 @@
 	</div></section>
 
 
-<!-- ----------------------------------	30	---------------------------------- -->
-<!-- ----------------------------------	30	---------------------------------- -->
-<!-- ----------------------------------	30	---------------------------------- -->
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
 
 	<section class="slide shout right" style="background-color: #FDD835;"><div>
 		<h2>Программное окружение</h2>
@@ -451,50 +431,6 @@
 	</div></section>
 
 
-<!-- ----------------------------------	31	---------------------------------- -->
-<!-- ----------------------------------	31	---------------------------------- -->
-<!-- ----------------------------------	31	---------------------------------- -->
-
-	<section class="slide shout right" style="background-color: #43A047;"><div>
-		<h2>Сроки</h2>
-	</div></section>
-
-
-	<section class="slide"><div>
-		<h2>Сроки</h2>
-				<ul>
-					<li>Все очень плохо</li>
-					<li>Никогда</li>
-					<li>Never</li>
-					<li>Ага</li>
-					<li>Оценка эффективности рекламных кампаний</li>
-					<li>Карта кликов</li>
-					<li>Почта, средства связи, удаленное управление сайтом и т.д.</li>
-				</ul>
-	</div></section>
-
-
-<!-- ----------------------------------	32	---------------------------------- -->
-<!-- ----------------------------------	32	---------------------------------- -->
-<!-- ----------------------------------	32	---------------------------------- -->
-
-	<section class="slide shout right" style="background-color: #D81B60;"><div>
-		<h2>Стоимость</h2>
-	</div></section>
-
-
-	<section class="slide"><div>
-		<h2>Программное окружение</h2>
-				<ul>
-					<li>Безопасность</li>
-					<li>Защита от спама</li>
-					<li>Онлайн мониторинг сайта</li>
-					<li>Полная статистика</li>
-					<li>Оценка эффективности рекламных кампаний</li>
-					<li>Карта кликов</li>
-					<li>Почта, средства связи, удаленное управление сайтом и т.д.</li>
-				</ul>
-	</div></section>
 
 
 
