--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Проект "Бакунина, 5"</title>
+	<title>Проект "VERY"</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=680, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -13,8 +13,8 @@
       cyan grid on slides
       -->
     <header class="caption">
-      <h1>Бакунина, 5</h1>
-      <p>Разработка сайта</p>
+      <h1>VERY</h1>
+      <p>Разработка сайта, фирменный стиль</p>
     </header>
 
 <!-- -----------------------------------	1	----------------------------------- -->
@@ -30,15 +30,11 @@
       <h2>Структура сайта</h2>
     <ul>
       <li>Главная страница</li>
-      <li>Фотогалерея</li>
-      <li>Офисы
-        <ol>
-          <li>Поэтажные планы</li>
-          <li>Фильтруемый каталог офисов</li>
-        </ol>
-      </li>
+      <li>О нас</li>
       <li>Новости</li>
-      <li>Арендаторы</li>
+      <li>Стилисты</li>
+      <li>Бренды</li>
+      <li>Магазины</li>
       <li>Контактная информация</li>
     </ul>
 	</div></section>
@@ -59,10 +55,11 @@
 					<li>Логотип</li>
 					<li>Контактные данные</li>
 					<li>Имиджевое фото</li>
+					<li>Купить онлайн</li>
 				</ol>
-			<li>Краткая информация о БЦ</li>
+			<li>Краткая информация о бутике</li>
 			<li>Блок новостей</li>
-			<li>Блок акций (срочные новости)</li>
+			<li>Блок акций</li>
 		</ul>
 	</div></section>
 
@@ -71,9 +68,7 @@
 	<section class="slide"><div>
 		<h2>Главная страница</h2>
 		<ul>
-			<li>Слайдер с фото и текстом</li>
-			<li>Форма отправки заявки</li>
-			<li>Блок с логотипами арендаторов</li>
+			<li>Форма обратной связи</li>
 			<li>Footer (Подвал)</li>
 				<ol>
 					<li>Контактная информация</li>
@@ -86,18 +81,18 @@
 <!-- -----------------------------------	6	----------------------------------- -->
 
 	<section class="slide shout up"><div>
-		<h2>Фотогалерея</h2>
+		<h2>О нас</h2>
 	</div></section>
 
 <!-- -----------------------------------	7	----------------------------------- -->
 
 	<section class="slide"><div>
-		<h2>Фотогалерея</h2>
+		<h2>О нас</h2>
 				<ul>
-					<li>Слайдер (на всю ширину)</li>
-					<li>Таблица фотографий (при наведении открываются)</li>
+					<li>Информация о бутике</li>
+					<li>Блоки изображений</li>
 					<li>Описание к каждому фото</li>
-					<li>Виртуальный тур (общий)</li>
+					<li>Сделать упор на стиль, возможно анимация и тд.</li>
 				</ul>
 	</div></section>
 
@@ -105,53 +100,24 @@
 <!-- -----------------------------------	9	----------------------------------- -->
 
 	<section class="slide shout up"><div>
-		<h2>Офисы</h2>
+		<h2>Стилисты</h2>
 	</div></section>
 
 <!-- -----------------------------------	10	----------------------------------- -->
 
 	<section class="slide"><div>
-		<h2>Офисы</h2>
+		<h2>Стилисты</h2>
 		<ul>
-			<li>Каталог</li>
+			<li>"Каталог" стилистов</li>
 				<ol>
-					<li>Каталог офисов (свободных)</li>
-					<li>Фильтр по площади, и функциям (кондиционер, интернет ... )</li>
-					<li>Карточка офиса
-						<ul>
-							<li>Фото</li>
-							<li>Виртуальный тур</li>
-							<li>Описание</li>
-							<li>Добавить в заявку. (Поставить на отслеживание...)</li>
-						</ul>
-					</li>
+					<li>Карточка стилиста</li>
+					<li>Краткая информация</li>
+					<li>Фото</li>
 				</ol>
 				</li>
 		</ul>
 			</div></section>
 
-
-<!-- -----------------------------------	11	----------------------------------- -->
-
-	<section class="slide"><div>
-		<h2>Офисы</h2>
-				<ul>
-					<li>План БЦ</li>
-						<ol>
-							<li>Внешний вид БЦ с поэтажным выбором</li>
-							<li>Интерактивная схема каждого этажа</li>
-							<li>Информация по офисам
-								<ul>
-									<li>Площадь</li>
-									<li>Арендная ставка</li>
-									<li>Описание</li>
-									<li>Сервисы (кондиционер, интернет ... )</li>
-								</ul>
-							</li>
-						</ol>
-						</li>
-				</ul>
-	</div></section>
 
 <!-- -----------------------------------	12	----------------------------------- -->
 
@@ -175,18 +141,18 @@
 
 
 	<section class="slide shout up"><div>
-		<h2>Арендаторы</h2>
+		<h2>Бренды</h2>
 	</div></section>
 
 <!-- -----------------------------------	13	----------------------------------- -->
 
 	<section class="slide"><div>
-		<h2>Арендаторы</h2>
+		<h2>Бренды</h2>
 				<ul>
-					<li>Список арендаторов</li>
+					<li>Список брендов</li>
 					<li>Логотип и название фирмы</li>
-					<li>Описание деятельности (с офиц. сайтов)</li>
-					<li>Краткая контактная информация о фирме</li>
+					<li>Краткое описание</li>
+					<li>Алфавитная фильтрация брендов</li>
 				</ul>
 	</div></section>
 
@@ -194,7 +160,7 @@
 
 
 	<section class="slide shout up"><div>
-		<h2>Контактная информация БЦ</h2>
+		<h2>Контактная информация</h2>
 	</div></section>
 
 <!-- -----------------------------------	13	----------------------------------- -->
@@ -202,7 +168,7 @@
 	<section class="slide"><div>
 		<h2>Контакты</h2>
 				<ul>
-					<li>Адрес</li>
+					<li>Адреса</li>
 					<li>Карта Google</li>
 					<li>Ссылки иконки на карту Google, Yandex <br> (Для использования на моб.)</li>
 					<li>Форма обратной связи <br>(Жалобы, предложения и вопросы по сотрудничеству)</li>
@@ -286,26 +252,6 @@
 	</div></section>
 
 
-		<!-- -----------------------------------	12	----------------------------------- -->
-
-
-	<section class="slide"><div>
-		<h2>Сервис обратной связи</h2>
-		<strong>JivoSite – онлайн консультант номер один в России</strong>
-				<ul>
-					<li>99176 сайтов уже используют JivoSite для увеличения конверсии.</li>
-					<li>Красивый и удобный чат для сайта</li>
-					<li>Удобное приложение оператора для эффективной работы</li>
-					<li>Можно наблюдать за посетителями на сайте</li>
-					<li>Множество возможностей для увеличения онлайн-продаж</li>
-				</ul>
-	</div></section>
-
-<section class="slide shout"><div>
-		<img src="images/jivo.png" height="525" width="883" alt="" class="place t l" style="width: 70%; height: auto;">
-		<img src="images/jivo2.png" height="369" width="700" alt="" class="place b r" style="width: 50%; height: auto;">
-	</div></section>
-
 
 
 <!-- -----------------------------------	14	----------------------------------- -->
@@ -340,7 +286,7 @@
 
 	<section class="slide"><div>
 		<h2>Типографика</h2>
-		<strong>Roboto<a target="_blank" href="https://www.google.com/design/spec/style/typography.html"> #</a></strong>
+		<strong>PT Serif<a target="_blank" href="https://www.google.com/design/spec/style/typography.html"> #</a></strong>
 				<ul>
 					<li>Универсален для всех платформ</li>
 					<li>Создан для интерфейсов</li>
@@ -375,33 +321,17 @@
 		<h2>Продвижение</h2>
 	</div></section>
 
-<!-- -----------------------------------	1	----------------------------------- -->
-
-
-	<section class="slide"><div>
-		<h2>Продвижение</h2>
-		<strong>Актуальные данные</strong>
-				<ul>
-					<li><a href="http://www.similarweb.com/website/b5.spb.ru" target="_blank">SEO анализ</a></li>
-							<li><a target="_blank" href="https://moz.com/researchtools/ose/links?site=B5.spb.ru&filter=&source=external&target=page&group=0&page=1&sort=page_authority&anchor_id=&anchor_type=&anchor_text=&from_site=">Кто ссылается на сайт?</a></li>
-							<li><a target="_blank" href="https://ru.ahrefs.com/site-explorer/overview/subdomains?target=B5.spb.ru">Анализ обратных ссылок</a></li>
-							<li><a target="_blank" href="https://developers.google.com/speed/pagespeed/insights/?url=B5.spb.ru&tab=mobile">Быстродействие</a></li>
-							<li><a target="_blank" href="http://validator.w3.org/check?uri=b5.spb.ru&charset=%28detect+automatically%29&doctype=Inline&group=0">Валидатор кода</a></li>
-				</ul>
-	</div></section>
-
 
 <!-- -----------------------------------	1	----------------------------------- -->
 
 	<section class="slide"><div>
 		<h2>Продвижение</h2>
-		<strong>Как должно быть</strong>
+		<strong>Надо сделать</strong>
 				<ul>
 					<li>Больше ссылающихся страниц</li>
 					<li>Прозрачность для робота (Yandex, Google)</li>
 					<li>Meta данные</li>
-					<li>Захватить все запросы по "Бакунина"</li>
-					<li>Заполнить Google данные</li>
+					<li>Заполнить данные (вебмастер и тд.)</li>
 					<li>Чистый код</li>
 					<li>Ускорение сайта</li>
 				</ul>
@@ -429,6 +359,58 @@
 					<li>Почта, средства связи, удаленное управление сайтом и т.д.</li>
 				</ul>
 	</div></section>
+
+
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
+
+<section class="slide shout right" style="background-color: #FFA726;"><div>
+		<h2>Сроки</h2>
+	</div></section>
+
+
+<section class="slide"><div>
+		<h2>Сроки выполнения</h2>
+		<strong>30 дней</strong> (Работы выполняются параллельно)
+				<ul>
+					<li>Верстка и программинг — 21</li>
+					<li>Фирменный стиль — 20</li>
+					<li>Настройка CMS - 7</li>
+					<li>Настройка программного окружения сайта — 7</li>
+					<li>Настройка SEO продвижения - 7</li>
+					<li>Дизайн и графика - 20</li>
+				</ul>
+	</div></section>
+
+
+<!-- -----------------------------------	14	----------------------------------- -->
+<!-- -----------------------------------	15	----------------------------------- -->
+<!-- -----------------------------------	16	----------------------------------- -->
+
+
+<section class="slide shout right" style="background-color: #00ACC1;" id="37"><div>
+		<h2>Стоимость</h2>
+	</div></section>
+
+
+<section class="slide" id="38"><div>
+		<h2>Стоимость</h2>
+				<ol>
+					<li>Верстка и программинг = 50 000 &#8381</li>
+					<li>Фирменный стиль = 100 000 &#8381</li>
+					<li>Настройка CMS = 30 000 &#8381</li>
+					<li>Создание программного окружения сайта = 20 000 &#8381</li>
+					<li>SEO - настройка = 20 000 &#8381</li>
+					<li>Дизайн и графика = 60 000 &#8381</li>
+					<strong>Итого: 280 000 &#8381</strong>
+				</ol>
+	</div></section>
+
+
+
+
+
 
 
 
