--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h3>Проект  &#171;Бизнес-центр&#187;</h3>
         <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/bakunina" target="_blank">&#128279;</a></p>
 
-        <h3>Проект  &#171;Basocrm&#187;</h3>
-        <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/basocrm" target="_blank">&#128279;</a></p>
+        <h3>Проект  &#171;Very&#187;</h3>
+        <p>Ссылка на презентацию <a href="http://paperdavid.github.io/presentations/very" target="_blank">&#128279;</a></p>
 
         <h3>Ui-kit for Epic Skills School</h3>
         <p>В разработке <a href="http://paperdavid.github.io/kit" target="_blank">&#128279;</a></p>
