--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -310,6 +310,118 @@
 				</ul>
 	</div></section>
 
+<!-- -----------------------------------  3  ----------------------------------- -->
+
+	<section class="slide shout up"><div>
+		<h2>Фирменный стиль</h2>
+	</div></section>
+
+<!-- -----------------------------------  4  ----------------------------------- -->
+
+	<section class="slide"><div>
+		<h2>Введение</h2>
+		<ul>
+			<li>0.1. Миссия и философия компании;</li>
+			<li>0.2. Ценности бренда;</li>
+			<li>0.3. Ключевые идентификаторы бренда; </li>
+			<li>0.4. Сообщения бренда, которое передается клиенту;</li>
+			<li>0.5. Каналы и методы передачи сообщения (аудио, видео, фото, тексты);</li>
+		</ul>
+	</div></section>
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Создание стиля: базовые элементы фирменного стиля</h2>
+		<ul>
+			<li>1.1. Цвета</li>
+			<li>1.1.1. Палитра CMYK;</li>
+			<li>1.1.2. Палитра RGB;</li><br>
+			<li>1.2. Логотип</li>
+			<li>1.2.1. Стандартное отображение;</li>
+			<li>1.2.2. Черно-белое отображение;</li>
+			<li>1.2.3. Монохромное отображение;</li>
+			<li>1.2.4. Инвертированное отображение;</li><br>
+			<li>1.3. Шрифты (подбор лицензионных шрифтов для заголовков и основного текста);</li>
+		</ul>
+	</div></section>
+
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Разработка фирменного стиля: деловая документация</h2>
+		<ul>
+			<li>2.1. Бланки</li>
+			<li>2.1.1. Вертикальный для основных документов;</li>
+			<li>2.1.2. Вертикальный для предложений и писем;</li>
+			<li>2.1.3. Горизонтальный для предложений и писем;</li><br>
+			<li>2.2. Визитки</li>
+			<li>2.2.1. Корпоративная односторонняя;</li>
+			<li>2.2.2. Корпоративная двухсторонняя;</li>
+			<li>2.2.3. Персональная односторонняя;</li>
+			<li>2.2.4. Персональная двухсторонняя;</li>
+		</ul>
+	</div></section>
+
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Разработка фирменного стиля: деловая документация</h2>
+		<ul>
+			<li>2.3. Конверты</li>
+			<li>2.3.1. Формат С-65 («евро», 229 x 114 мм);</li>
+			<li>2.3.2. Формат С-4 (324 х 229 мм);</li>
+			<li>2.3.3. Формат С-5 (229 х 162 мм);</li><br>
+			<li>2.4. Папка для документов;</li><br>
+			<li>2.5. Записываемый компакт-диск CD-R (обложка и «яблоко»);</li>
+		</ul>
+	</div></section>
+
+
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Разработка фирменного стиля: имиджевая и сувенирная продукция</h2>
+		<ul>
+			<li>3.1. Ежедневник;</li>
+			<li>3.2. Блокнот;</li>
+			<li>3.3. Визитница;</li>
+			<li>3.4. Пакет;</li>
+			<li>3.5. Бейдж;</li>
+			<li>3.6. Наклейка;</li>
+			<li>3.7. Одежда и униформа</li>
+			<li>3.8. Посуда (кружка, стакан)</li>
+			<li>3.9. Ручка, брелок, зажигалка</li>
+		</ul>
+	</div></section>
+
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Разработка фирменного стиля: рекомендации по корпоративному дизайну</h2>
+		<ul>
+			<li>4.1. Наружная реклама</li>
+			<li>4.1.1. Перетяжка;</li>
+			<li>4.1.2. Лайт-бокс;</li>
+			<li>4.1.3. Вывеска;</li>
+			<li>4.1.5. Билборды;</li>
+			<li>4.1.6. Уличный указатель;</li>
+			<li>4.1.7. Табличка перед входом;</li>
+			<li>4.1.8. Внешнее оформление торговой точки;</li>
+			<li>4.2. Офомление интерьерное</li>
+			<li>4.3. Офомление автотранспорта</li>
+		</ul>
+	</div></section>
+
+
+	<section class="slide" style="font-size:15px;"><div>
+		<h2>Разработка фирменного стиля: создание макетов для печатной продукции</h2>
+		<ul>
+			<li>5.1. Каталог</li>
+			<li>5.1.1. Типовые страницы каталога</li>
+			<li>5.2. Буклеты</li>
+			<li>5.3. Календари;</li>
+			<li>5.4. Листовки и флаеры;</li>
+		</ul>
+	</div></section>
+
+
+
+
 
 
 
