--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -501,12 +501,12 @@
 <!-- -----------------------------------	16	----------------------------------- -->
 
 
-<section class="slide shout right" style="background-color: #00ACC1;" id="37"><div>
+<section class="slide shout right" style="background-color: #00ACC1;"><div>
 		<h2>Стоимость</h2>
 	</div></section>
 
 
-<section class="slide" id="38"><div>
+<section class="slide"><div>
 		<h2>Стоимость</h2>
 				<ol>
 					<li>Верстка и программинг = 50 000 &#8381</li>
