--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -131,8 +131,7 @@
 		<h2>Новости</h2>
 				<ul>
 					<li>Блоговый поток новостей</li>
-					<li>Возможность синхронизации с соц. сетями <br>(Vk, Facebook, Instagram...)</li>
-					<li>Возможность комментировать</li>
+					<li>Автоматическая загрузка фото из Instagram</li>
 					<li>Новость: автор, дата, фото и описание</li>
 				</ul>
 	</div></section>
@@ -266,18 +265,13 @@
 
 
 	<section class="slide"><div>
-		<h2>Концепция</h2>
-		<strong>Консервативный минимализм</strong>
+		<h2>Образцы</h2>
+		<strong></strong>
 				<ul>
-					<li>Акцент на доверие и репутацию</li>
-					<li><a target="_blank" href="http://www.google.com/design/spec/what-is-material/material-properties.html">Материальный дизайн</a></li>
-					<li>Дизайн стран
-						<ol>
-							<li><a target="_blank" href="https://www.google.ru/search?q=swiss+design&newwindow=1&espv=2&biw=1920&bih=1105&tbm=isch&tbo=u&source=univ&sa=X&ei=UBucVeycFefVyAOb8Y3wCg&ved=0CBsQsAQ#newwindow=1&tbm=isch&q=scandinavian+graphic+design">Скандинавские страны</a></li>
-							<li><a target="_blank" href="https://www.google.ru/search?q=swiss+design&newwindow=1&espv=2&biw=1920&bih=1105&tbm=isch&tbo=u&source=univ&sa=X&ei=UBucVeycFefVyAOb8Y3wCg&ved=0CBsQsAQ">Швейцария</a></li>
-							<li><a target="_blank" href="https://www.google.ru/search?q=swiss+design&newwindow=1&espv=2&biw=1920&bih=1105&tbm=isch&tbo=u&source=univ&sa=X&ei=UBucVeycFefVyAOb8Y3wCg&ved=0CBsQsAQ#newwindow=1&tbm=isch&q=german+graphic+design">Германия</a></li>
-						</ol>
-					</li>
+					<li><a target="_blank" href="https://www.antonioli.eu">antonioli</a></li>
+					<li><a target="_blank" href="http://eu.carven.com/eu_en/">carven</a></li>
+					<li><a target="_blank" href="http://polygraw.com">polygraw</a></li>
+					<li><a target="_blank" href="http://www.harveynichols.com">harveynichols</a></li>
 				</ul>
 	</div></section>
 
