--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -152,6 +152,7 @@
 					<li>Логотип и название фирмы</li>
 					<li>Краткое описание</li>
 					<li>Алфавитная фильтрация брендов</li>
+					<li>Лукбуки</li>
 				</ul>
 	</div></section>
 
