--- a/presentations/very/index.html
+++ b/presentations/very/index.html
@@ -92,7 +92,7 @@
 					<li>Информация о бутике</li>
 					<li>Блоки изображений</li>
 					<li>Описание к каждому фото</li>
-					<li>Сделать упор на стиль, возможно анимация и тд.</li>
+					<li>Упор на стиль, современные веб-технологии - анимация, parallax, интерактивные элементы</li>
 				</ul>
 	</div></section>
 
