--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <h3>Ui-kit for Epic Skills School</h3>
         <p>В разработке <a href="http://paperdavid.github.io/kit" target="_blank">&#128279;</a></p>
 
+        <h3>Dellos</h3>
+        <p>В разработке <a href="http://paperdavid.github.io/sites/dellos" target="_blank">&#128279;</a></p>
+
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages</small></p>
