--- a/sites/dellos/index.html
+++ b/sites/dellos/index.html
@@ -12,6 +12,8 @@
 	<body class="landing">
 		<div id="page-wrapper">
 
+
+
 			<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Dellos</a></h1>
@@ -40,6 +42,11 @@
 						</ul>
 					</nav>
 				</header>
+
+					<video autoplay loop poster="sail.jpg" id="bgvid">
+						<source src="/video/sail.webm" type="video/webm">
+						<source src="/video/sail.mp4" type="video/mp4">
+					</video>
 
 			<!-- Banner -->
 				<section id="banner">
