--- a/sites/dellos/index.html
+++ b/sites/dellos/index.html
@@ -20,33 +20,17 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Главная</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
+							<li><a href="#">Layouts</a></li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Заказать</a></li>
 						</ul>
 					</nav>
 				</header>
 
-					<video autoplay loop poster="sail.jpg" id="bgvid">
-						<source src="/video/sail.webm" type="video/webm">
-						<source src="/video/sail.mp4" type="video/mp4">
-					</video>
+<!-- 					<video autoplay loop poster="sail.jpg" id="bgvid">
+						<source src="video/sail.webm" type="video/webm">
+						<source src="video/sail.mp4" type="video/mp4">
+					</video> -->
 
 			<!-- Banner -->
 				<section id="banner">
