--- a/sites/dellos/index.html
+++ b/sites/dellos/index.html
@@ -20,6 +20,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Главная</a></li>
+							<li><a href="#">Продукция</a></li>
+							<li><a href="partners.html">Партнеры</a></li>
+							<li><a href="contacts.html">Контакты</a></li>
 							<li><a href="#">Layouts</a></li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Заказать</a></li>
@@ -27,11 +30,11 @@
 					</nav>
 				</header>
 
-<!-- 					<video autoplay loop poster="sail.jpg" id="bgvid">
+			<!-- 		<video autoplay loop poster="sail.jpg" id="bgvid">
 						<source src="video/sail.webm" type="video/webm">
 						<source src="video/sail.mp4" type="video/mp4">
-					</video> -->
-
+					</video>
+ -->
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
