--- a/sites/dellos/contacts.html
+++ b/sites/dellos/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dellos – Партнеры</title>
+		<title>Dellos – Контакты</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -94,7 +94,7 @@
 													}
 												</script> 
 												<body onload="initialize()"> 
-													<div id="map_canvas" style="height: 450px; width:100%; margin-bottom: 30px;"></div> 
+													<div id="map_canvas" style="width:100%; margin-bottom: 30px;"></div> 
 												</body> 
 												<!-- END Карта -->
 												</span></div></div>
@@ -102,14 +102,14 @@
 
 <div class="container">
 						<div class="row 150%">
-							<div class="3u 12u$(medium)">
+							<div class="3u 12u$(medium) important(medium)">
 
 								<!-- Sidebar -->
 									<section id="sidebar">
 											<h2>Контакты</h2>
 										</section>
 							</div>
-							<div class="9u$ 12u$(medium) important(medium)">
+							<div class="9u$ 12u$(medium)">
 
 								<!-- AZS -->
 									<section id="content">
@@ -120,11 +120,11 @@
 											</div>
 											<div class="4u 12u$(medium)">
 											<h4>Телефон</h4>
-											<p>+7 (812) 448-39-69<br>+7 (812) 448-39-69</p>
+											<p><a href="tel:+78124483969">+7 (812) 448-39-69</a><br><a href="tel:+78124483969">+7 (812) 448-39-69</a></p>
 											</div>
 											<div class="4u 12u$(medium)">
 											<h4>Почта</h4>
-											<p>ntd@ntd-spb.ru<br></p>
+											<p><a href="mailto:ntd@ntd-spb.ru">ntd@ntd-spb.ru</a><br></p>
 											</div>
 										</div>
 										</section>
@@ -138,14 +138,14 @@
 
 				<div class="container">
 						<div class="row 150%">
-							<div class="3u 12u$(medium)">
+							<div class="3u 12u$(medium) important(medium)">
 
 								<!-- Sidebar -->
 									<section id="sidebar">
 											<h2>Обратная связь</h2>
 										</section>
 							</div>
-							<div class="9u$ 12u$(medium) important(medium)">
+							<div class="9u$ 12u$(medium)">
 
 								<!-- AZS -->
 									<section id="content">
@@ -194,17 +194,16 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon alt fa-vk"><span class="label">Vkontakte</span></a></li>
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2015 Немецкий Торговый Дом - СПб</li><li>Разработка: <a href="http://the-vine.ru" target="_blank">The Vine</a></li>
 					</ul>
 				</footer>
+
 
 		</div>
 
